# mock_arduino

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Rakefile
include/: ArduinoMock.h  HardwareSerial.h  HardwareSerialMock.h  Print.h  PrintMock.h  Stream.h  StreamMock.h
test/: HardwareSerialTest.cpp
